--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
 div {
   border: 1px solid black;
   margin: -1px;
@@ -7,7 +11,7 @@ div {
 body {
   height: 100vh;
   display: flex;
-  flex-direction: column;
+
   justify-content: center;
   align-items: center;
 }
