--- a/style.css
+++ b/style.css
@@ -26,9 +26,23 @@ body {
   align-items: center;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#buttons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+}
+
 #display {
   display: flex;
   flex-wrap: wrap;
   border: 1px solid black;
   background-color: white;
+  margin-bottom: 30px;
 }
