--- a/style.css
+++ b/style.css
@@ -43,6 +43,6 @@ main {
   display: flex;
   flex-wrap: wrap;
   border: 1px solid black;
-  background-color: white;
+  background-color: black;
   margin-bottom: 30px;
 }
